# tensorflow-serving-grpc-python-example

./: README.md  pyproject.toml
tests/: test_tfserving_grpc_py.py
tfserving_grpc_py/: app.py
tfserving_grpc_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
